add img folder for organization

--- a/replica/index.html
+++ b/replica/index.html
@@ -3,7 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Replica of Example Webpage</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Welcome to this challenge!</h1>
+
+    <ul>
+      Here is your list of objectives:
+      <li>Lay out the Content & Sidebar</li>
+      <li>Create proper margins & spacing around items</li>
+      <li>Import & Use a Custom Font</li>
+      <li>Color Scheme: Blue & Orange (use however you see fit)</li>
+      <li>Style text appropriately</li>
+      <li>Change the background color of the sidebar</li>
+      <li>Style image grid however you see fit</li>
+      <li>Create borders around each sidebar items</li>
+      <li>Create grid/flexbox for image and text under 'Subtitle 1'</li>
+      <li>Image grow on hover</li>
+      <li>Link color change on hover</li>
+      <li>Page animation sequence for main items (Content, sidebar)</li>
+    </ul>
+
+    <p>
+      Do not feel limited by the objectives! Change or append anything you like.
+      Good Luck!
+    </p>
+
+    <h2>Subtitle 1</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores eveniet
+      corporis blanditiis ad officiis enim odit vero ea deleniti.
+    </p>
+    <h2>Subtitle 2</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores eveniet
+      corporis blanditiis ad officiis enim odit vero ea deleniti.
+    </p>
+    <h3>Topic</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores eveniet
+      corporis blanditiis ad officiis enim odit vero ea deleniti.
+    </p>
+
+    <ul>
+      <li>Lorem</li>
+      <li>ipsum</li>
+      <li>dolor</li>
+      <li>sit</li>
+      <li>amet consectetur adipisicing elit!</li>
+    </ul>
+
+    <!--  IMAGE GALLERY  -->
+  </body>
 </html>
