--- a/replica/index.html
+++ b/replica/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Replica of Example Webpage</title>
+
+    <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
     <h1>Welcome to this challenge!</h1>
@@ -52,6 +54,9 @@
       <li>sit</li>
       <li>amet consectetur adipisicing elit!</li>
     </ul>
+
+    <!--  IMAGE NEXT TO LIST ON BODY  -->
+    <img src="img/shooting-star.jpg" alt="shooting star" />
 
     <!--  IMAGE GALLERY  -->
   </body>
