fix image to align it to the right of the subtitles using the float property

--- a/replica/index.html
+++ b/replica/index.html
@@ -8,39 +8,60 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
-    <h1>Welcome to this challenge!</h1>
+    <div class="body-main">
+      <h1>Welcome to this challenge!</h1>
+      <p>Here is your list of objectives:</p>
+      <ul>
+        <li>Lay out the Content & Sidebar</li>
+        <li>Create proper margins & spacing around items</li>
+        <li>Import & Use a Custom Font</li>
+        <li>Color Scheme: Blue & Orange (use however you see fit)</li>
+        <li>Style text appropriately</li>
+        <li>Change the background color of the sidebar</li>
+        <li>Style image grid however you see fit</li>
+        <li>Create borders around each sidebar items</li>
+        <li>Create grid/flexbox for image and text under 'Subtitle 1'</li>
+        <li>Image grow on hover</li>
+        <li>Link color change on hover</li>
+        <li>Page animation sequence for main items (Content, sidebar)</li>
+      </ul>
 
-    <ul>
-      Here is your list of objectives:
-      <li>Lay out the Content & Sidebar</li>
-      <li>Create proper margins & spacing around items</li>
-      <li>Import & Use a Custom Font</li>
-      <li>Color Scheme: Blue & Orange (use however you see fit)</li>
-      <li>Style text appropriately</li>
-      <li>Change the background color of the sidebar</li>
-      <li>Style image grid however you see fit</li>
-      <li>Create borders around each sidebar items</li>
-      <li>Create grid/flexbox for image and text under 'Subtitle 1'</li>
-      <li>Image grow on hover</li>
-      <li>Link color change on hover</li>
-      <li>Page animation sequence for main items (Content, sidebar)</li>
-    </ul>
+      <p>
+        Do not feel limited by the objectives! Change or append anything you
+        like. Good Luck!
+      </p>
+    </div>
 
-    <p>
-      Do not feel limited by the objectives! Change or append anything you like.
-      Good Luck!
-    </p>
+    <div class="subtitles">
+      <h2>Subtitle 1</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores eveniet
+        corporis blanditiis ad officiis enim odit vero ea deleniti. Lorem ipsum
+        dolor sit, amet consectetur adipisicing elit. Ullam ab perspiciatis
+        iure, aspernatur, autem, maxime quos voluptatem labore aperiam nisi
+        animi at. Nesciunt distinctio quam incidunt molestias eius, minima
+        ipsam?
+      </p>
 
-    <h2>Subtitle 1</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores eveniet
-      corporis blanditiis ad officiis enim odit vero ea deleniti.
-    </p>
-    <h2>Subtitle 2</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores eveniet
-      corporis blanditiis ad officiis enim odit vero ea deleniti.
-    </p>
+      <img
+        class="main-img"
+        src="img/shooting-star.jpg"
+        alt="shooting star"
+        height="400px"
+        width="auto"
+      />
+
+      <h2>Subtitle 2</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores eveniet
+        corporis blanditiis ad officiis enim odit vero ea deleniti. Lorem, ipsum
+        dolor sit amet consectetur adipisicing elit. Maxime maiores
+        necessitatibus voluptatibus illo et, itaque porro omnis voluptatem vel
+        tempore perspiciatis natus, repudiandae officia molestiae molestias quis
+        impedit eveniet! Perspiciatis.
+      </p>
+    </div>
+
     <h3>Topic</h3>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores eveniet
@@ -54,9 +75,6 @@
       <li>sit</li>
       <li>amet consectetur adipisicing elit!</li>
     </ul>
-
-    <!--  IMAGE NEXT TO LIST ON BODY  -->
-    <img src="img/shooting-star.jpg" alt="shooting star" />
 
     <!--  IMAGE GALLERY  -->
   </body>
