add image gallery

--- a/replica/index.html
+++ b/replica/index.html
@@ -77,5 +77,16 @@
     </ul>
 
     <!--  IMAGE GALLERY  -->
+
+    <div class="img-gallery">
+      <img src="img/blue-gallaxy.jpg" alt="" />
+      <img src="img/distant-galaxy.jpg" alt="" />
+      <img src="img/earth-grid.jpg" alt="" />
+      <img src="img/earth-satellite.jpg" alt="" />
+      <img src="img/full-moon.jpg" alt="" />
+      <img src="img/jupiter.jpg" alt="" />
+      <img src="img/milky-way.jpg" alt="" />
+      <img src="img/stars-cluster.jpg" alt="" />
+    </div>
   </body>
 </html>
