add hover effect to links and images in image-grid

--- a/replica/index.html
+++ b/replica/index.html
@@ -70,15 +70,15 @@
         </div>
 
         <div class="image-grid">
-          <img src="../img/img-2.jpg" />
-          <img src="../img/img-3.jpg" />
-          <img src="../img/img-4.jpg" />
-          <img src="../img/img-5.jpg" />
-          <img src="../img/img-6.jpg" />
-          <img src="../img/img-7.jpg" />
-          <img src="../img/img-8.jpg" />
-          <img src="../img/img-9.jpg" />
-          <img src="../img/img-10.jpg" />
+          <img src="img/stars-cluster.jpg" />
+          <img src="img/blue-gallaxy.jpg" />
+          <img src="img/distant-galaxy.jpg" />
+          <img src="img/earth-grid.jpg" />
+          <img src="img/earth-satellite.jpg" />
+          <img src="img/full-moon.jpg" />
+          <img src="img/jupiter.jpg" />
+          <img src="img/milky-way.jpg" />
+          <img src="img/shooting-star.jpg" />
         </div>
       </div>
 
